# jaxctrl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
autoresearch/: experiment.py
examples/: diff_lqr_demo.py  grn_hypergraph_drivers.ipynb  irma_sindy_lqr.ipynb  repressilator_control_demo.py  sindy_lqr_demo.ipynb  tensor_lqr_demo.py
jaxctrl/: __init__.py  _arte.py  _controllability.py  _gramian.py  _hypergraph_control.py  _lyapunov.py  _riccati.py  _simulate.py  _sysid.py  _tensor_eigen.py  _tensor_ops.py
manuscript/: config.yaml
test/: conftest.py  test_agents_md.py  test_arte.py  test_autoresearch.py  test_ci_config.py  test_controllability.py  test_examples.py  test_gramian.py  test_hypergraph_control.py  test_lyapunov.py  test_manuscript.py  test_readme_extras.py  test_riccati.py  test_riccati_grads.py  test_scalability.py  test_simulate.py  test_sysid.py  test_tensor_eigen.py  test_tensor_ops.py
