[project]
name = "jaxctrl"
version = "0.1.0"
description = "Differentiable control theory in JAX: Lyapunov, Riccati, Gramians, tensor control, and hypergraph controllability."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "equinox>=0.11.0",
]

[project.optional-dependencies]
solvers = ["lineax>=0.0.4", "optimistix>=0.0.6"]
hypergraph = ["hgx>=0.1.0"]
diffrax = ["diffrax>=0.6.0"]
dev = ["pre-commit", "ruff"]
tests = ["pytest", "beartype"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
